--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 nav {
     float:right;
-    background-color:White;
+    background-color: white;
     align-items: center; 
 }
 
@@ -17,6 +17,7 @@ nav {
     font-size: 16px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 22px;
+    margin-left: 200px;
 }
 
 .links a {
@@ -37,4 +38,45 @@ nav {
 .links a:hover {
     color: blue;
     font-size: 18px;
+}
+
+#main-info {
+    display: inline-block;
+    margin-left: 100px;
+    width: 50%;
+    padding: 22px;
+    margin: 44px 40px 44px 0px;
+    background-color: white;
+    border: solid 2px #777777;
+    
+}
+
+#main-info p {
+    color: #777777;
+    margin: 0px 22px 0px 22px;
+    padding: 6px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 30px;
+}
+
+#main-info img {
+    padding: 6px;
+}
+
+h2 {
+    color: #4aaaa5;
+    padding: 6px;
+    border-bottom: solid 1px #777777;
+}
+
+body {
+    background:
+    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+      }
 }
